--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "nodemon": "^2.0.7",
     "sass": "~1.32.6",
     "sass-loader": "10"
+  },
+  "resolutions": {
+    "@nuxtjs/vuetify/**/sass": "1.32.6"
   }
 }
