--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/i18n": "^7.3.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/vercel-builder": "^0.24.0",
     "@nuxtjs/vuetify": "^1.11.3",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.9.1",
